app/assets/stylesheets/create-menu.css.scss
#create-menu {
  .export-options {
    position: relative;

    .disabled-cover {
      position: absolute;
      width: 100%;
      height: 100%;
      background-color: $background-color;
      opacity: 0.6;
      z-index: 9999;
    }
  }

  .divider {
    margin: 20px 0;
    height: 1px;
    text-align: center;
    background-color: $unemphasized-color;

    span {
      position: relative;
      top: -0.7em;
      padding: 0 10px;
      font-size: 1.8em;
      color: $pandora-blue;
      background-color: $background-color;
    }
  }

  .well {
    position: relative;
    margin: 0;
    min-height: 150px;
  }

  #spotify-tracks {
    width: 100%;
    height: 100%;
    overflow: auto;
  }

  .zero-clipboard {
    position: absolute;
    top: -45px;
    right: 0;
  }
}

